completed calculator design

--- a/index.html
+++ b/index.html
@@ -10,36 +10,36 @@
 <body>
     <div class="master">
         <div class="second">
-            <div class="screen"></div>
+            <div class="screen">important stuff</div>
         </div>
         <div class="second">
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+            <div class="button">A/C</div>
+            <div class="button">+/-</div>
+            <div class="button">DEL</div>
+            <div class="button">/</div>
         </div>
         <div class="second">
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+            <div class="button number">7</div>
+            <div class="button number">8</div>
+            <div class="button number">9</div>
+            <div class="button">*</div>
         </div>
         <div class="second">
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+            <div class="button number">4</div>
+            <div class="button number">5</div>
+            <div class="button number">6</div>
+            <div class="button" class="number">+</div>
         </div>
         <div class="second">
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+            <div class="button number">1</div>
+            <div class="button number">2</div>
+            <div class="button number">3</div>
+            <div class="button">-</div>
         </div>
         <div class="second">
-            <div class="button" id="zero"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+            <div class="button number" id="zero">0</div>
+            <div class="button">.</div>
+            <div class="button">=</div>
         </div>
     </div>
 </body>
