Display functionality added. Number buttons functional

--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
             <div class="screen">important stuff</div>
         </div>
         <div class="second">
-            <div class="button">A/C</div>
-            <div class="button">+/-</div>
-            <div class="button">DEL</div>
-            <div class="button">/</div>
+            <button class="button">A/C</button>
+            <button class="button">+/-</button>
+            <button class="button">DEL</button>
+            <button id="divide" class="button operator">/</button>
         </div>
         <div class="second">
-            <div class="button number">7</div>
-            <div class="button number">8</div>
-            <div class="button number">9</div>
-            <div class="button">*</div>
+            <button id="7" class="button number">7</button>
+            <button id="8" class="button number">8</button>
+            <button id="9" class="button number">9</button>
+            <button id="mulitply" class="button operator">*</button>
         </div>
         <div class="second">
-            <div class="button number">4</div>
-            <div class="button number">5</div>
-            <div class="button number">6</div>
-            <div class="button" class="number">+</div>
+            <button id="4" class="button number">4</button>
+            <button id="5" class="button number">5</button>
+            <button id="6" class="button number">6</button>
+            <button id="plus" class="button operator">+</button>
         </div>
         <div class="second">
-            <div class="button number">1</div>
-            <div class="button number">2</div>
-            <div class="button number">3</div>
-            <div class="button">-</div>
+            <button id="1" class="button number">1</button>
+            <button id="2" class="button number">2</button>
+            <button id="3" class="button number">3</button>
+            <button id="minus" class="button operator">-</button>
         </div>
         <div class="second">
-            <div class="button number" id="zero">0</div>
-            <div class="button">.</div>
-            <div class="button">=</div>
+            <button class="button number zero" id="0">0</button>
+            <button class="button">.</button>
+            <button class="button">=</button>
         </div>
     </div>
 </body>
