--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
     <div class="master">
         <div class="second">
-            <div class="screen">important stuff</div>
+            <div class="screen">0</div>
         </div>
         <div class="second">
-            <button class="button">A/C</button>
-            <button class="button">+/-</button>
-            <button class="button">DEL</button>
+            <button class="button clear">A/C</button>
+            <button class="button toggle">+/-</button>
+            <button class="button delete">DEL</button>
             <button id="divide" class="button operator">/</button>
         </div>
         <div class="second">
             <button id="7" class="button number">7</button>
             <button id="8" class="button number">8</button>
             <button id="9" class="button number">9</button>
-            <button id="mulitply" class="button operator">*</button>
+            <button id="multiply" class="button operator">*</button>
         </div>
         <div class="second">
             <button id="4" class="button number">4</button>
@@ -38,8 +38,8 @@
         </div>
         <div class="second">
             <button class="button number zero" id="0">0</button>
-            <button class="button">.</button>
-            <button class="button">=</button>
+            <button id="." class="button decimal">.</button>
+            <button id="equals" class="button">=</button>
         </div>
     </div>
 </body>
